--- a/data/templates/fact-envelope.xml
+++ b/data/templates/fact-envelope.xml
@@ -1,9 +1,9 @@
 <batch-execution lookup="watchsession" >
 	<insert-elements return-object="false">
-	
+
 	$(factbody)
 
 	</insert-elements>
 	<fire-all-rules/>
-	<query out-identifier="Watch" name="getWatch"/>
+	<query out-identifier="Watch" name="getFactout"/>
 </batch-execution>
